[gd_scene format=3 uid="uid://cn4x75h6firqg"]

[ext_resource type="Script" uid="uid://d3g0tr6su57no" path="res://scripts/story_1.gd" id="1_kfn6h"]
[ext_resource type="Texture2D" uid="uid://dmgwc0ktym2x3" path="res://assets/Story_images/Image-story-3.png" id="2_kfn6h"]

[node name="Story3" type="Control" unique_id=2116153655]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kfn6h")

[node name="TextureRect" type="TextureRect" parent="." unique_id=125258889]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kfn6h")
expand_mode = 1

[node name="RichTextLabel1" type="RichTextLabel" parent="." unique_id=1246045783]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -658.0
offset_top = -162.0
offset_right = 658.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 42
text = "Sur le fil, Chouchou arrive à entrer dans la navette publique. Mais non ! Le pilote est malade !"
fit_content = true
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="RichTextLabel1" unique_id=657037018]
z_index = -1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -652.0
offset_right = 652.0
offset_bottom = 535.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.6117647)

[node name="RichTextLabel2" type="RichTextLabel" parent="." unique_id=1864045043]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -622.6675
offset_top = -323.0
offset_right = 622.6675
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 68
text = "Sur le fil, Chouchou arrive à entrer dans la navette publique. Mais non ! Le pilote est malade !"
fit_content = true
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="RichTextLabel2" unique_id=211962951]
z_index = -1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -620.6675
offset_right = 620.6675
offset_bottom = 535.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.6117647)

[node name="RichTextLabel3" type="RichTextLabel" parent="." unique_id=22346117]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -688.0
offset_top = -552.0
offset_right = 688.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 90
text = "Sur le fil, Chouchou arrive à entrer dans la navette publique. Mais non ! Le pilote est malade !"
fit_content = true
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="RichTextLabel3" unique_id=134776191]
z_index = -1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -668.33496
offset_right = 673.0
offset_bottom = 633.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.6117647)
